# midimap

./: .gitignore  LICENSE  README.md  build_exe.bat  config.json  gui.py  keyboard_backend.py  main.py  midimap.spec  pyproject.toml  requirements.txt  run_gui.bat  run_gui.sh
src/: __init__.py  gui.py  keyboard.py  mapper.py
src/converters/: __init__.py  audio.py  inference.py  youtube.py
utils/: __init__.py  audio.py  config.py  resources.py  vad.py
