[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midimap"
version = "1.0.0"
description = "MIDI to keyboard mapper with AI-powered audio transcription"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["midi", "keyboard", "music", "transcription", "piano", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "mido>=1.2.10",
    "pynput>=1.7.6",
]

[project.optional-dependencies]
audio = [
    "librosa>=0.9.2",
    "numpy>=1.24.0",
    "onnxruntime>=1.15.0",
]
youtube = [
    "yt-dlp>=2024.1.0",
]
all = [
    "librosa>=0.9.2",
    "numpy>=1.24.0",
    "onnxruntime>=1.15.0",
    "yt-dlp>=2024.1.0",
]

[project.scripts]
midimap = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/midimap"
Repository = "https://github.com/yourusername/midimap"
Issues = "https://github.com/yourusername/midimap/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "utils*"]

[tool.setuptools.package-data]
"*" = ["models/*.onnx"]
